# PyQt6-Fluent

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
docs/: api-reference.md  examples.md  index.md  token-system.md
examples/: acrylic_demo.py  button_base_demo.py  catppuccin_demo.py  custom_styling.py  demo.py  fluent_demo.py  main_window.py  screen_capture_filter.py  switch_demo.py  theme_demo.py  web_engine.py
pyqt_fluent/: __init__.py
pyqt_fluent/_rc/: resource.qrc
pyqt_fluent/icons/: __init__.py  engine.py  svg.py  widget.py
pyqt_fluent/presets/: __init__.py  catppuccin.py  dark.py  light.py
pyqt_fluent/styles/: __init__.py  engine.py
pyqt_fluent/tokens/: __init__.py  component.py  palette.py  resolver.py  semantic.py  theme.py  typography.py
pyqt_fluent/utils/: __init__.py  animation.py  color.py  dpi.py  theme.py  win32_utils.py
pyqt_fluent/webengine/: __init__.py
pyqt_fluent/widgets/_shared/: __init__.py  background_animation.py  checkable.py  focus_ring.py  icon_widget.py  ripple.py  shadow.py  theme_aware.py  translate_animation.py
pyqt_fluent/widgets/buttons/: __init__.py  _base.py  button.py  switch.py  toggle_button.py
pyqt_fluent/widgets/data/: __init__.py  date_picker.py  number_box.py  time_picker.py
pyqt_fluent/widgets/feedback/: __init__.py  badge.py  progress_bar.py  progress_ring.py  spinner.py
pyqt_fluent/widgets/inputs/: __init__.py  line_edit.py  password_box.py  rating.py  slider.py  spin_box.py  tag.py  text_edit.py
pyqt_fluent/widgets/layout/: __init__.py  card.py  divider.py
pyqt_fluent/widgets/media/: __init__.py
(+25 files in other folders)
